# xtream_rust

./: .gitignore  Cargo.toml  api.md  app.manifest  astro.config.mjs  build.rs  build.sh  cmds.md  latest.json  package-lock.json  package.json  privacy_policy.md  readme.md
.github/workflows/: release.yml
assets/: generate_icons.sh  icon.icns  xtreme_iptv.desktop
docs/: index.html
docs/_astro/: index.a0xD9TU3.css
src/: api.rs  config.rs  ffmpeg_player.rs  m3u_parser.rs  m3u_parser_tests.rs  main.rs  models.rs  xspf_parser.rs  xspf_parser_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/epg/: mod.rs  parser.rs
src/pages/: index.astro
src/pages/api/: proxy.ts
src/scripts/: stream.js
src/styles/: global.css
