[package]
name = "xtreme_iptv"
version = "0.1.2"
edition = "2021"
description = "Cross-platform IPTV player with Xtream Codes API support"
license = "MIT"
authors = ["Xtreme IPTV"]

[features]
default = []
internal-player = ["ffmpeg-next"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.15"
ffmpeg-next = { version = "8.0", optional = true }

# Platform-specific features
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

# Fast memory allocator (Linux, macOS - not Windows MSVC)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[lints.rust]
dead_code = "allow"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"

# Windows x64 with AVX/AVX2 optimizations (x86-64-v3)
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-cpu=x86-64-v3", "-C", "link-arg=-s"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=x86-64-v3", "-C", "target-feature=+crt-static"]

# Windows ARM64 - Optimized for Snapdragon X Elite/Plus
# Features: NEON, AES, SHA2, CRC32, LSE (atomics), FP16, DotProd, RCPC
[target.aarch64-pc-windows-gnullvm]
rustflags = [
    "-C", "target-cpu=cortex-a76",
    "-C", "target-feature=+neon,+aes,+sha2,+crc,+lse,+fp16,+dotprod,+rcpc",
    "-C", "link-arg=-s"
]

[target.aarch64-pc-windows-msvc]
rustflags = [
    "-C", "target-cpu=cortex-a76",
    "-C", "target-feature=+neon,+aes,+sha2,+crc,+lse,+fp16,+dotprod,+rcpc",
    "-C", "target-feature=+crt-static"
]

# Linux x64 with AVX/AVX2 optimizations (x86-64-v3)
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=x86-64-v3"]

# Linux ARM64 - Optimized for Snapdragon/Apple Silicon/Ampere
# Features: NEON, AES, SHA2, CRC32, LSE (atomics), FP16, DotProd, RCPC
[target.aarch64-unknown-linux-gnu]
rustflags = [
    "-C", "target-cpu=cortex-a76",
    "-C", "target-feature=+neon,+aes,+sha2,+crc,+lse,+fp16,+dotprod,+rcpc",
    "-C", "link-arg=-s"
]

# Linux RISC-V 64-bit - Optimized with standard extensions
# Features: RV64GC (General + Compressed) + V (Vector)
[target.riscv64gc-unknown-linux-gnu]
rustflags = [
    "-C", "target-feature=+c,+m,+a,+f,+d",
    "-C", "link-arg=-s"
]

# macOS x64 (Intel) with AVX/AVX2 optimizations
[target.x86_64-apple-darwin]
rustflags = ["-C", "target-cpu=x86-64-v3"]

# macOS ARM64 (Apple Silicon M1/M2/M3/M4) - Optimized
# Features: NEON, AES, SHA2, CRC32, LSE, FP16, DotProd
[target.aarch64-apple-darwin]
rustflags = [
    "-C", "target-cpu=apple-m1",
    "-C", "target-feature=+neon,+aes,+sha2,+crc,+lse,+fp16,+dotprod"
]
